<resources>
    <!-- Strings related to main screen -->
    <string name="app_name">Hedhi Help</string>
    <string name="title_activity_login">Sign In</string>
    <string name="sign_out">Sign Out</string>


    <!-- Strings related to home screen -->
    <string name="lessons_module">Lessons</string>
    <string name="calendar_module">Calendar</string>
    <string name="resources_module">Resources</string>
    <string name="forum_module">Discussion</string>
    <string name="settings_module">Settings</string>
    <string name="about_module">Our Team</string>

    <!-- Strings related to lessons screen -->
    <string name="lesson_text">User\'s Lessons</string>
    <string name="lesson_one">Lesson One</string>
    <string name="lesson_future">Coming Soon…</string>

    <!-- Strings related to login -->
    <string name="label_email">Email:</string>
    <string name="prompt_email">Email</string>
    <string name="label_password">Password:</string>
    <string name="prompt_password">Password</string>
    <string name="signed_out">Signed out!</string>
    <string name="auth_failed">Authorization Failed!</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="loading">Loading</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_account" translatable="false">activity_account</string>
    <string name="create_an_account">Create an account.</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="create_account">Create Account</string>
    <string name="name_label">Name:</string>
    <string name="name_prompt">Name</string>
    <string name="age_label">Age:</string>
    <string name="age_prompt">Age</string>
    <string name="create_account_confirm_password">Confirm password:</string>
    <string name="start_period_tracking">Start Period Tracking</string>
    <string name="stop_period_tracking">Stop period tracking</string>
    <string name="settings">Settings</string>
    <string name="title_activity_period_settings" translatable="false">PeriodSettings</string>
    <string name="period_settings_title">Period Settings</string>
    <string name="period_length">Cycle Length:</string>
    <string name="days_between_periods">Days between periods:</string>
    <string name="save_settings">Save Settings</string>
    <string name="restore_default_settings">Restore Default Settings</string>

    <string name="title_activity_fullscreen" translatable="false">ModuleActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="skip">Skip?</string>
    <string name="choose_a_language">Choose a Language:</string>
    <string name="title_activity_forum">Discussion</string>
    <string name="account_crete_prompt">Don\'t have an account?</string>
    <string name="lesson_two">Lesson Two</string>
    <string name="welcome_text">Welcome!</string>

    <string name="title_activity_about" translatable="false">about</string>
    <string name="action_settings">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="tab_text_1">Engineers</string>
    <string name="tab_text_2">Public Health</string>
    <string name="tab_text_3">Graphic Design</string>
    <string name="tab_text_4">Advisers</string>
    <string name="title_activity_about_us" translatable="false">AboutUsActivity</string>
    <string name="swahili">Swahili</string>
    <string name="english" translatable="false">English</string>

    <string name="title_activity_maps">Map</string>

    <!-- Strings related to Clinics -->
    <string name="clinic_name">Clinic Name:</string>
    <string name="clinic_address">Address:</string>
    <string name="clinic_phone">Phone Number:</string>

    <!--The following strings correspond to the modules-->
    <string name="module_1_1">She is excited to go to school.</string>
    <string name="module_1_2">Along the way she will grow and change like all the girls in this world do.</string>
    <string name="module_1_3">She will grow taller each year.</string>
    <string name="module_1_4">She will get older and experience more changes as she becomes a woman.</string>
    <string name="module_1_5">She will develop breasts. It is normal for one breast to be bigger than the other.</string>
    <string name="module_1_6">Her clothes will fit differently.</string>
    <string name="module_1_7">Her hips will get wider.</string>
    <string name="module_1_8">All these changes prepare her for becoming a woman, and starting her period.</string>
    <string name="module_1_9">All her friends are changing too, some fast, some slower. </string>
    <string name="module_1_10">Changing is beautiful. People grow differently and this is normal.</string>
    <string name="module_1_11">     </string>
    <string name="quit_module">Quit Module</string>

</resources>
