<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    android:layout_gravity="center">


    <TextView
        android:id="@+id/clinic_name_title"
        android:layout_width="384dp"
        android:layout_height="32dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/clinic_name"
        android:textSize="17sp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/clinic_name"
        android:layout_width="384dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/raleway"
        android:text="@string/clinic_name"
        app:layout_constraintStart_toStartOf="@id/clinic_name_title"
        app:layout_constraintTop_toTopOf="@id/clinic_name_title" />

    <TextView
        android:id="@+id/clinic_address_title"
        android:layout_width="384dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:textSize="17sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/clinic_address"
        app:layout_constraintStart_toStartOf="@id/clinic_name"
        app:layout_constraintTop_toTopOf="@id/clinic_name" />

    <TextView
        android:id="@+id/clinic_address"
        android:layout_width="383dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:textSize="17sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/raleway"
        android:text="@string/clinic_address"
        app:layout_constraintStart_toStartOf="@id/clinic_address_title"
        app:layout_constraintTop_toTopOf="@id/clinic_address_title" />

    <TextView
        android:id="@+id/clinic_phone_title"
        android:layout_width="384dp"
        android:layout_height="32dp"
        android:layout_marginTop="40dp"
        android:textSize="17sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/clinic_phone"
        app:layout_constraintStart_toStartOf="@id/clinic_address"
        app:layout_constraintTop_toTopOf="@id/clinic_address" />

    <TextView
        android:id="@+id/clinic_phone"
        android:layout_width="383dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:textSize="17sp"
        android:textColor="@android:color/white"
        android:text="@string/clinic_phone"
        app:layout_constraintStart_toStartOf="@id/clinic_phone_title"
        app:layout_constraintTop_toTopOf="@id/clinic_phone_title" />

    <Button
        android:id="@+id/directions_button"
        android:layout_width="144dp"
        android:layout_height="74dp"
        android:layout_marginLeft="120dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/raleway_bold"
        android:text="Directions"
        android:textColor="@color/green"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/clinic_phone"
        app:layout_constraintTop_toBottomOf="@+id/clinic_phone" />

    <Button
        android:id="@+id/hide_button"
        android:layout_width="61dp"
        android:layout_height="36dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/raleway_bold"
        android:text="Hide"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <WebView
        android:id="@+id/myWebView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />


</android.support.constraint.ConstraintLayout>